@@ -7,6 +7,7 @@ Users which contributed patches added to versions after 1.0:
 * RichardP
 * UngarPeter
 * Robin Rowe (rower@movieeditor.com)
+* TomScanlan
 * DavidWall
 * Trent
 
